--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
+
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
   <style>
    .chromeFrameInstallDefaultStyle {
      margin-top: 10px;
@@ -14,7 +14,7 @@
      border: 5px solid blue;
    }
   </style>
-  
+
   <script src="js/Three.js"></script>
   <script src="js/plane.js"></script>
   <script src="js/thingiview.js"></script>
@@ -31,9 +31,9 @@
       thingiview = new Thingiview("viewer");
       thingiview.setObjectColor('#C0D8F0');
       thingiview.setBackgroundColor('#ffffff');
-      
+
       thingiview.initScene();
-    }  
+    }
 
     function diffStls(stlFilename){
       thingiview.loadSTLDiff(['../old/'+stlFilename, '../new/'+stlFilename])
@@ -94,13 +94,13 @@
 </div>
 
 <p style="text-align:center">
-  <input onclick="thingiview.setCameraView('top');" type="button" value="Top" /> 
-  <input onclick="thingiview.setCameraView('side');" type="button" value="Side" /> 
-  <input onclick="thingiview.setCameraView('bottom');" type="button" value="Bottom" /> 
-  <input onclick="thingiview.setCameraView('diagonal');" type="button" value="Diagonal" /> 
- 
-  <input onclick="thingiview.setCameraZoom(5);" type="button" value="Zoom +" /> 
-  <input onclick="thingiview.setCameraZoom(-5);" type="button" value="Zoom -" /> 
+  <input onclick="thingiview.setCameraView('top');" type="button" value="Top" />
+  <input onclick="thingiview.setCameraView('side');" type="button" value="Side" />
+  <input onclick="thingiview.setCameraView('bottom');" type="button" value="Bottom" />
+  <input onclick="thingiview.setCameraView('diagonal');" type="button" value="Diagonal" />
+
+  <input onclick="thingiview.setCameraZoom(5);" type="button" value="Zoom +" />
+  <input onclick="thingiview.setCameraZoom(-5);" type="button" value="Zoom -" />
   Rotation: <input onclick="thingiview.setRotation(true);" type="button" value="on" /> | <input onclick="thingiview.setRotation(false);" type="button" value="off" />
 <br>
     Background Color: <a href="#" onclick="thingiview.setBackgroundColor('#606060')">Gray</a> | <a href="#" onclick="thingiview.setBackgroundColor('#ffffff')">White</a> | <a href="#" onclick="thingiview.setBackgroundColor('#000000')">Black</a>
